--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -9,6 +9,7 @@
     <!--BS finaliza-->
     <link rel="shortcut icon" href="../multimedia/logo png.png" type="image/x-icon">
     <link rel="stylesheet" href="../style.css">
+    <script src="https://kit.fontawesome.com/a5bc06265e.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!--Nav bar inicia-->
@@ -40,7 +41,7 @@
         </div>
     </nav>
 <!--Nav bar finaliza-->
-<h2>Clientes que nos certifican</h2>
+<h1>Clientes que nos certifican</h1>
     <div class="clients">
         <div class="item item1"></div>
         <div class="item item2"></div>
