--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -42,11 +42,9 @@
     </nav>
 <!--Nav bar finaliza-->
     <div class="vw_truck">
-        <section>Somos Caran Concretos, una empresa joven que busca consolidarse como principal proveedor de hormigón
-            elaborado de la zona. Esta idea nace 2 años atras, cuando nos dimos cuenta que nuestra ciudad necesitaba una
-            empresa hormigonera local, que pueda satisfacer las necesidades basicas en el ámbito de la construcción.
-            Para llevar a cabo esta misión, utilizamos herramientas de ultima tecnología, facilitando las tareas de
-            nuestros empleados, los cuales son profesionales y experimentados. </section>
+        <div class="us">
+            <p>Somos Caran Concretos, una empresa joven que busca consolidarse como principal proveedor de hormigón elaborado de la zona. Esta idea nace 2 años atras, cuando nos dimos cuenta que nuestra ciudad necesitaba una empresa hormigonera local, que pueda satisfacer las necesidades basicas en el ámbito de la construcción. Para llevar a cabo esta misión, utilizamos herramientas de ultima tecnología, facilitando las tareas de nuestros empleados, los cuales son profesionales y experimentados.</p>
+        </div>
         <img src="" alt="">
     </div>
     <footer>
@@ -74,7 +72,7 @@
             <div class="redes_sociales">
                 <h4>Redes sociales</h4>
                 <a href="https://www.instagram.com/nehu_caraballo_/"> <i class="fa-brands fa-instagram"
-                        style="color: #ffffff;"></i></a>
+                style="color: #ffffff;"></i></a>
             </div>
         </div>
     </footer>
