--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--BS finaliza-->
     <link rel="stylesheet" href="../style.css">
+    <script src="https://kit.fontawesome.com/a5bc06265e.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!--Nav bar inicia-->
