--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -6,10 +6,12 @@
     <title>Servicios-Caran concretos</title>
     <link rel="shortcut icon" href="../multimedia/logo png.png" type="image/x-icon">
     <!--BS inicia-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--BS finaliza-->
     <link rel="shortcut icon" href="multimedia/logo png.png" type="image/x-icon">
     <link rel="stylesheet" href="../style.css">
+    <script src="https://kit.fontawesome.com/a5bc06265e.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!--Nav bar inicia-->
@@ -18,8 +20,7 @@
             <a class="navbar-brand" href="../index.html">
                 <img src="../multimedia/logo caran.png" alt="" class="img-navbar">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#collapsibleNavbar">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse d-flex justify-content-end" id="collapsibleNavbar">
@@ -40,31 +41,40 @@
             </div>
         </div>
     </nav>
-<!--Nav bar finaliza-->
-    <div class="servicios">
-        <div class="fot fot1">
-            <h3>Bombeo de hormigón</h3>
-            <p>Brindamos servicio de bombeo con camiones pluma y cañerías fijas con un alcance de hasta 200 mts y una velocidad de 120 mts³ por hora.</p>
-        </div>
-        <div class="fot fot2">
-            <h3>Venta y distribución de hormigón</h3>
-            <p>Poseemos una moderna flota de camiones mixer y mini-mixer que aseguran el trasporte con rapidez y limpieza hasta dentro de la obra.</p>
-        </div>
-        <div class="fot fot3">
-            <h3>Moviemiento de suelo</h3>
-            <p>Contamos con equipos de primera calidad para la realización de movimiento de suelos, que se lleva a cabo como parte de la preparación y moldeado antes de la cimentación de las obras.</p>
-        </div>
-        <div class="fot fot4">
-            <h3>Laboratorio y control de calidad</h3>
-            <p>Sometemos el producto a un análisis de curado, resistencia, composición y humedad. Garantizando así, la calidad y uniformidad del hormigón entregado.</p>
-        </div>
+    <!--Nav bar finaliza-->
+<section>
+    <article class="card">
+        <div class="card_img card_img1"></div>
+        <h3 class="card_title">Bombeo de hormigón</h3>
+        <p class="card_desc">Brindamos servicio de bombeo con camiones pluma y cañerías fijas con un alcance de hasta 200 mts y una velocidad de 120 mts³ por hora.</p>
+        <a href="https://walink.co/fcfa32">Consultar</a>
+    </article>
+    <article class="card">
+        <div class="card_img card_img2"></div>
+        <h3 class="card_title">Venta y distribución de hormigón</h3>
+        <p class="card_desc">Poseemos una moderna flota de camiones mixer y mini-mixer que aseguran el trasporte con rapidez y limpieza hasta dentro de la obra.</p>
+        <a href="https://walink.co/fcfa32">Consultar</a>
+    </article>
+    <article class="card">
+        <div class="card_img card_img3"></div>
+        <h3 class="card_title">Labratorio y control de calidad</h3>
+        <p class="card_desc">Sometemos el producto a un análisis de curado, resistencia, composición y humedad. Garantizando así, la calidad y uniformidad del hormigón entregado.</p>
+        <a href="https://walink.co/fcfa32">Consultar</a>
+    </article>
+    <article class="card">
+        <div class="card_img card_img4"></div>
+        <h3 class="card_title">Moviento de suelo</h3>
+        <p class="card_desc">Contamos con equipos de primera calidad para la realización de movimiento de suelos, que se lleva a cabo antes de la cimentación de las obras.</p>
+        <a href="https://walink.co/fcfa32">Consultar</a>
+    </article>
+</section>
     </div>
     <footer>
         <div class="container__footer">
             <div class="logo1">
                 <a href="../index.html">
                     <img src="../multimedia/logo caran.png" alt="">
-                </a>
+                    </a>
             </div>
             <nav>
                 <div class="navegacion">
@@ -83,12 +93,15 @@
             </div>
             <div class="redes_sociales">
                 <h4>Redes sociales</h4>
-                <a href="https://www.instagram.com/nehu_caraballo_/"> <i class="fa-brands fa-instagram" style="color: #ffffff;"></i></a>
+                <a href="https://www.instagram.com/nehu_caraballo_/"> <i class="fa-brands fa-instagram"
+                    style="color: #ffffff;"></i></a>
                 </div>
             </div>
         </div>
     </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
 </body>
 </html>
