--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -7,7 +7,7 @@
     <!--BS inicia-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--BS finaliza-->
-    <link rel="shortcut icon" href="../multimedia/logo png.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../multimedia/loguito.png" type="image/x-icon">
     <link rel="stylesheet" href="../style.css">
     <script src="https://kit.fontawesome.com/a5bc06265e.js" crossorigin="anonymous"></script>
 </head>
