--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -75,6 +75,7 @@
             </div>
             <div class="redes_sociales">
                 <h4>Redes sociales</h4>
+                <a href="https://walink.co/fcfa32"> <i class="fa-brands fa-whatsapp" style="color: #ffffff;"></i></a> 
                 <a href="https://www.instagram.com/nehu_caraballo_/"> <i class="fa-brands fa-instagram" style="color: #ffffff;"></i></a>
             </div>
             </div>
