--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -57,13 +57,13 @@
     </article>
     <article class="card">
         <div class="card_img card_img3"></div>
-        <h3 class="card_title">Labratorio y control de calidad</h3>
+        <h3 class="card_title">Laboratorio y control de calidad</h3>
         <p class="card_desc">Sometemos el producto a un análisis de curado, resistencia, composición y humedad. Garantizando así, la calidad y uniformidad del hormigón entregado.</p>
         <a href="https://walink.co/fcfa32">Consultar</a>
     </article>
     <article class="card">
         <div class="card_img card_img4"></div>
-        <h3 class="card_title">Moviento de suelo</h3>
+        <h3 class="card_title">Movimiento de suelo</h3>
         <p class="card_desc">Contamos con equipos de primera calidad para la realización de movimiento de suelos, que se lleva a cabo antes de la cimentación de las obras.</p>
         <a href="https://walink.co/fcfa32">Consultar</a>
     </article>
