--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
 </head>
 <body>
     <!--Nav bar inicia-->
+    <header>
         <nav class="navbar navbar-expand-sm navbar-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
                     <img src="multimedia/logo caran.png" alt="" class="img-navbar">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapsibleNavbar">
+                    data-bs-target="#collapsibleNavbar" aria-controls="collapsibleNavbar" aria-expanded="false">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse d-flex justify-content-end" id="collapsibleNavbar">
@@ -40,6 +41,7 @@
                 </div>
             </div>
         </nav>
+    </header>
     <!--Nav bar finaliza-->
     <!--columnas del home-->
     <main>
