--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -41,7 +41,7 @@
         </div>
     </nav>
 <!--Nav bar finaliza-->
-<h1>Clientes que nos certifican</h1>
+<h1>Clientes que certifican nuestros servicios</h1>
     <div class="clients">
         <div class="item item1"></div>
         <div class="item item2"></div>
