--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -41,18 +41,21 @@
         </div>
     </nav>
 <!--Nav bar finaliza-->
-    <form action="enviar.php" method="post" enctype="text/plain">
-        <h6>Contactanos</h6>
-        <label for="">Nombre</label>
-        <input type="text"><br>
-        <label for="">Apellido</label>
-        <input type="text"><br>
-        <label for="">Email</label>
-        <input type="email"required><br>
-        <label for="">Teléfono</label>
-        <input type="text"required><br>
-        <input type="submit"> 
-    </form>
+<form>
+    <div class="mb-3">
+        <label for="formGroupExampleInput" class="form-label">Nombre</label>
+        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Ingresa tu nombre">
+    </div>
+    <div class="mb-3">
+        <label for="formGroupExampleInput2" class="form-label">Apellido</label>
+        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Ingresa tu apellido">
+    </div>
+    <div class="mb-3">
+        <label for="formGroupExampleInput2" class="form-label">Email</label>
+        <input type="text" class="form-control" id="formGroupExampleInput3" required placeholder="Ingresa tu correo">
+    </div>
+    <button type="button" class="btn btn-primary">Enviar</button>
+</form>
     <h6>Encontranos en:</h6>
         <div class="mapa">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3300.864817919007!2d-58.97226012499819!3d-34.17537373500183!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bb73d258bea93f%3A0x35a1c087d0c5ea27!2sPueyrred%C3%B3n%201033%2C%20Campana%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1690237677928!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
