--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros-Caran concretos</title>
     <!--BS inicia-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--BS finaliza-->
     <link rel="shortcut icon" href="../multimedia/loguito.png" type="image/x-icon">
     <link rel="stylesheet" href="../style.css">
@@ -18,8 +19,7 @@
             <a class="navbar-brand" href="../index.html">
                 <img src="../multimedia/logo caran.png" alt="" class="img-navbar">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#collapsibleNavbar">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse d-flex justify-content-end" id="collapsibleNavbar">
@@ -40,10 +40,14 @@
             </div>
         </div>
     </nav>
-<!--Nav bar finaliza-->
+    <!--Nav bar finaliza-->
     <div class="vw_truck">
         <div class="us">
-            <p>Somos Caran Concretos, una empresa joven que busca consolidarse como principal proveedor de hormigón elaborado de la zona. Esta idea nace 2 años atras, cuando nos dimos cuenta que nuestra ciudad necesitaba una empresa hormigonera local, que pueda satisfacer las necesidades basicas en el ámbito de la construcción. Para llevar a cabo esta misión, utilizamos herramientas de ultima tecnología, facilitando las tareas de nuestros empleados, los cuales son profesionales y experimentados.</p>
+            <p>Somos Caran Concretos, una empresa joven que busca consolidarse como principal proveedor de hormigón
+                elaborado de la zona. Esta idea nace 2 años atras, cuando nos dimos cuenta que nuestra ciudad necesitaba
+                una empresa hormigonera local, que pueda satisfacer las necesidades basicas en el ámbito de la
+                construcción. Para llevar a cabo esta misión, utilizamos herramientas de ultima tecnología, facilitando
+                las tareas de nuestros empleados, los cuales son profesionales y experimentados.</p>
         </div>
         <img src="" alt="">
     </div>
@@ -71,12 +75,14 @@
             </div>
             <div class="redes_sociales">
                 <h4>Redes sociales</h4>
-                <a href="https://walink.co/fcfa32"> <i class="fa-brands fa-whatsapp" style="color: #ffffff;"></i></a> 
+                <a href="https://walink.co/fcfa32"> <i class="fa-brands fa-whatsapp" style="color: #ffffff;"></i></a>
                 <a href="https://www.instagram.com/nehu_caraballo_/"> <i class="fa-brands fa-instagram"
-                style="color: #ffffff;"></i></a>
+                        style="color: #ffffff;"></i></a>
             </div>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
 </body>
 </html>
