sitio full responsive

--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -18,6 +18,9 @@
             <a class="navbar-brand" href="../index.html">
                 <img src="../multimedia/logo caran.png" alt="" class="img-navbar">
             </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
