--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -18,6 +18,9 @@
             <a class="navbar-brand" href="../index.html">
                 <img src="../multimedia/logo caran.png" alt="" class="img-navbar">
             </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -50,7 +53,9 @@
         <label for="formGroupExampleInput2" class="form-label">Email</label>
         <input type="text" class="form-control" id="formGroupExampleInput3" required placeholder="Ingresa tu correo">
     </div>
-    <button type="button" class="btn btn-primary">Enviar</button>
+    <div class="boton">
+        <button type="button" class="btn btn-primary">Enviar</button>
+    </div>
 </form>
     <h6>Encontranos en:</h6>
         <div class="mapa">
