--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicios-Caran concretos</title>
     <link rel="shortcut icon" href="../multimedia/loguito.png" type="image/x-icon">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--BS inicia-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -15,53 +16,55 @@
 </head>
 <body>
     <!--Nav bar inicia-->
-    <nav class="navbar navbar-expand-sm navbar-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html">
-                <img src="../multimedia/logo caran.png" alt="" class="img-navbar">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../pages/servicios.html">Servicios</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../pages/clientes.html">Clientes</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../pages/contacto.html">Contacto</a>
-                    </li>
-                </ul>
+    <header>
+        <nav class="navbar navbar-expand-sm navbar-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html">
+                    <img src="../multimedia/logo caran.png" alt="" class="img-navbar">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/servicios.html">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/clientes.html">Clientes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </header>
     <!--Nav bar finaliza-->
 <section>
-    <article class="card">
+    <article class="card" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-offset="0">
         <div class="card_img card_img1"></div>
         <h3 class="card_title">Bombeo de hormigón</h3>
         <p class="card_desc">Brindamos servicio de bombeo con camiones pluma y cañerías fijas con un alcance de hasta 200 mts y una velocidad de 120 mts³ por hora.</p>
         <a href="https://walink.co/fcfa32">Consultar</a>
     </article>
-    <article class="card">
+    <article class="card" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-offset="0">
         <div class="card_img card_img2"></div>
         <h3 class="card_title">Venta y distribución de hormigón</h3>
         <p class="card_desc">Poseemos una moderna flota de camiones mixer y mini-mixer que aseguran el trasporte con rapidez y limpieza hasta dentro de la obra.</p>
         <a href="https://walink.co/fcfa32">Consultar</a>
     </article>
-    <article class="card">
+    <article class="card" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-offset="0">
         <div class="card_img card_img3"></div>
         <h3 class="card_title">Laboratorio y control de calidad</h3>
         <p class="card_desc">Sometemos el producto a un análisis de curado, resistencia, composición y humedad. Garantizando así, la calidad y uniformidad del hormigón entregado.</p>
         <a href="https://walink.co/fcfa32">Consultar</a>
     </article>
-    <article class="card">
+    <article class="card" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-offset="0">
         <div class="card_img card_img4"></div>
         <h3 class="card_title">Movimiento de suelo</h3>
         <p class="card_desc">Contamos con equipos de primera calidad para la realización de movimiento de suelos, que se lleva a cabo antes de la cimentación de las obras.</p>
@@ -101,6 +104,10 @@
         </div>
     </div>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
