trabajo en sass

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -11,7 +11,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--BS finaliza-->
     <link rel="shortcut icon" href="multimedia/logo png.png" type="image/x-icon">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <script src="https://kit.fontawesome.com/a5bc06265e.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -52,19 +52,19 @@
         <p class="card_desc">Brindamos servicio de bombeo con camiones pluma y cañerías fijas con un alcance de hasta 200 mts y una velocidad de 120 mts³ por hora.</p>
         <a href="https://walink.co/fcfa32">Consultar</a>
     </article>
-    <article class="card" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-offset="0">
+    <article class="card" data-aos="fade-zoom-in" data-aos-delay="100" data-aos-easing="ease-in-back" data-aos-offset="0">
         <div class="card_img card_img2"></div>
         <h3 class="card_title">Venta y distribución de hormigón</h3>
         <p class="card_desc">Poseemos una moderna flota de camiones mixer y mini-mixer que aseguran el trasporte con rapidez y limpieza hasta dentro de la obra.</p>
         <a href="https://walink.co/fcfa32">Consultar</a>
     </article>
-    <article class="card" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-offset="0">
+    <article class="card" data-aos="fade-zoom-in" data-aos-delay="200" data-aos-easing="ease-in-back" data-aos-offset="0">
         <div class="card_img card_img3"></div>
         <h3 class="card_title">Laboratorio y control de calidad</h3>
         <p class="card_desc">Sometemos el producto a un análisis de curado, resistencia, composición y humedad. Garantizando así, la calidad y uniformidad del hormigón entregado.</p>
         <a href="https://walink.co/fcfa32">Consultar</a>
     </article>
-    <article class="card" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-offset="0">
+    <article class="card" data-aos="fade-zoom-in" data-aos-delay="300" data-aos-easing="ease-in-back" data-aos-offset="0">
         <div class="card_img card_img4"></div>
         <h3 class="card_title">Movimiento de suelo</h3>
         <p class="card_desc">Contamos con equipos de primera calidad para la realización de movimiento de suelos, que se lleva a cabo antes de la cimentación de las obras.</p>
