--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicios-Caran concretos</title>
+    <meta name="description" content="Ofrecemos un producto de alta calidad, elaborado por herramientas de última tecnología. Además, contamos con una flota de camiones mixer y mini-mixer, que facilitan la distribución del hormigón hacia las obras.">
+    <meta name="keywords" content="caran concretos, hormigonera, venta de hormigón, proveedor de hormigon en campana, productos de hormigon, servicio de bombeo">
     <link rel="shortcut icon" href="../multimedia/loguito.png" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--BS inicia-->
@@ -11,7 +13,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--BS finaliza-->
     <link rel="shortcut icon" href="multimedia/logo png.png" type="image/x-icon">
-    <link rel="stylesheet" href="../scss/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <script src="https://kit.fontawesome.com/a5bc06265e.js" crossorigin="anonymous"></script>
 </head>
 <body>
