--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caran concretos</title>
+    <meta name="description" content="Somos una empresa especializada en la producción y venta de hormigón elaborado de la zona norte de Buenos Aires, con miras a ampliarnos. Para esto, brindamos una gama de servicios que se distinguen por su calidad y profesionalidad.">
+    <meta name="keywords" content="caran concretos, empresa hormigonera en buenos aires, empresa hormigonera, hormigon elaborado, suministro de hormigon, empresa de construccion en campana">
     <!--BS inicia-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--BS finaliza-->
     <link rel="shortcut icon" href="multimedia/loguito.png" type="image/x-icon">
-    <link rel="stylesheet" href="./scss/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/a5bc06265e.js" crossorigin="anonymous"></script>
 </head>
 <body>
