--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clientes-Caran concretos</title>
+    <meta name="description" content="Nuestro compromiso con la excelencia en la fabricación de hormigón, nos ha convertido en un socio confiable y preferido por arquitectos y contratistas de nuestra zona. Estamos comprometidos con la sostenibilidad y satisfacción del cliente.">
+    <meta name="keywords" content="concreto, hormigon, empresa hormigonera, suministro de hormigon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--BS inicia-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--BS finaliza-->
     <link rel="shortcut icon" href="../multimedia/loguito.png" type="image/x-icon">
-    <link rel="stylesheet" href="../scss/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <script src="https://kit.fontawesome.com/a5bc06265e.js" crossorigin="anonymous"></script>
 </head>
 <body>
