--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto-Caran concretos</title>
+    <meta name="description" content="Si tenes una pregunta, no dudes en ponerte en contacto con nosotros. Valoramos la comunicación y la atencion personalizada a nuestros clientes.">
+    <meta name="keywords" content="cotizacion hormigon en campana, precio del hormigon, costo del hormigon en campana">
     <link rel="shortcut icon" href="../multimedia/loguito.png" type="image/x-icon">
     <!--BS inicia-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--BS finaliza-->
-    <link rel="stylesheet" href="../scss/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <script src="https://kit.fontawesome.com/a5bc06265e.js" crossorigin="anonymous"></script>
 </head>
 <body>
