--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros-Caran concretos</title>
+    <meta name="description" content="Somos un equipo de profesionales, apasionados y comprometidos con la producción de hormigón para la industria constructora. Siendo una empresa con pocos años en el rubro, nos posicionamos como principal proovedor de hormigón de nuestra zona.">
+    <meta name="keywords" content="empresa hormigonera, empresa hormigonera en campana, hormigon elaborado,">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--BS inicia-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--BS finaliza-->
     <link rel="shortcut icon" href="../multimedia/loguito.png" type="image/x-icon">
-    <link rel="stylesheet" href="../scss/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <script src="https://kit.fontawesome.com/a5bc06265e.js" crossorigin="anonymous"></script>
 </head>
 <body>
