termino de aplicar seo

--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-sm navbar-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">
-                    <img src="../multimedia/logo caran.png" alt="" class="img-navbar">
+                    <img src="../multimedia/logo caran.png" alt="logo de la empresa" class="img-navbar">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
@@ -45,7 +45,7 @@
         </nav>
     </header>
 <!--Nav bar finaliza-->
-<h1 data-aos="fade-down">Clientes que certifican nuestros servicios</h1>
+<p data-aos="fade-down">Clientes que certifican nuestros servicios</p>
     <div class="clients">
         <div class="item item1"></div>
         <div class="item item2"></div>
@@ -59,12 +59,12 @@
         <div class="container__footer">
             <div class="logo1">
                 <a href="../index.html">
-                    <img src="../multimedia/logo caran.png" alt="">
+                    <img src="../multimedia/logo caran.png" alt="logo de la empresa">
                 </a>
             </div>
             <nav>
                 <div class="navegacion">
-                    <h4>Navegación</h4>
+                    <h2>Navegación</h2>
                     <a href="../pages/nosotros.html">Nosotros</a><br>
                     <a href="../pages/servicios.html">Servicios</a><br>
                     <a href="../pages/clientes.html">Clientes</a><br>
@@ -72,13 +72,13 @@
                 </div>
             </nav>
             <div class="contacto">
-                <h4>Contacto</h4>
-                <h5>3489-343164</h5>
-                <h5>caranconcretos@gmail.com</h5>
-                <h5>Pueyrredón 1033, Campana, Buenos Aires.</h5>
+                <h2>Contacto</h2>
+                <p>3489-343164</p>
+                <p>caranconcretos@gmail.com</p>
+                <p>Pueyrredón 1033, Campana, Buenos Aires.</p>
             </div>
             <div class="redes_sociales">
-                <h4>Redes sociales</h4>
+                <h2>Redes sociales</h2>
                 <a href="https://walink.co/fcfa32"> <i class="fa-brands fa-whatsapp" style="color: #ffffff;"></i></a> 
                 <a href="https://www.instagram.com/nehu_caraballo_/"> <i class="fa-brands fa-instagram" style="color: #ffffff;"></i></a>
             </div>
