--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-expand-sm navbar-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">
-                    <img src="../multimedia/logo caran.png" alt="" class="img-navbar">
+                    <img src="../multimedia/logo caran.png" alt="logo de la empresa" class="img-navbar">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
@@ -61,20 +61,20 @@
         <button type="button" class="btn btn-primary">Enviar</button>
     </div>
 </form>
-    <h6>Encontranos en:</h6>
-        <div class="mapa">
+    <div class="mapa">
+        <p>Encontranos en:</p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3300.864817919007!2d-58.97226012499819!3d-34.17537373500183!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bb73d258bea93f%3A0x35a1c087d0c5ea27!2sPueyrred%C3%B3n%201033%2C%20Campana%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1690237677928!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+    </div>
     <footer>
         <div class="container__footer">
             <div class="logo1">
                 <a href="../index.html">
-                    <img src="../multimedia/logo caran.png" alt="">
+                    <img src="../multimedia/logo caran.png" alt="logo de la empresa">
                 </a>
             </div>
             <nav>
                 <div class="navegacion">
-                    <h4>Navegación</h4>
+                    <h2>Navegación</h2>
                     <a href="../pages/nosotros.html">Nosotros</a><br>
                     <a href="../pages/servicios.html">Servicios</a><br>
                     <a href="../pages/clientes.html">Clientes</a><br>
@@ -82,13 +82,13 @@
                 </div>
             </nav>
             <div class="contacto">
-                <h4>Contacto</h4>
-                <h5>3489-343164</h5>
-                <h5>caranconcretos@gmail.com</h5>
-                <h5>Pueyrredón 1033, Campana, Buenos Aires.</h5>
+                <h2>Contacto</h2>
+                <p>3489-343164</p>
+                <p>caranconcretos@gmail.com</p>
+                <p>Pueyrredón 1033, Campana, Buenos Aires.</p>
             </div>
             <div class="redes_sociales">
-                <h4>Redes sociales</h4>
+                <h2>Redes sociales</h2>
                 <a href="https://walink.co/fcfa32"> <i class="fa-brands fa-whatsapp" style="color: #ffffff;"></i></a> 
                 <a href="https://www.instagram.com/nehu_caraballo_/"> <i class="fa-brands fa-instagram" style="color: #ffffff;"></i></a>
             </div>
