--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-expand-sm navbar-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">
-                    <img src="../multimedia/logo caran.png" alt="" class="img-navbar">
+                    <img src="../multimedia/logo caran.png" alt="logo de la empresa" class="img-navbar">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
@@ -50,25 +50,25 @@
 <section>
     <article class="card" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-offset="0">
         <div class="card_img card_img1"></div>
-        <h3 class="card_title">Bombeo de hormigón</h3>
+        <h1 class="card_title">Bombeo de hormigón</h1>
         <p class="card_desc">Brindamos servicio de bombeo con camiones pluma y cañerías fijas con un alcance de hasta 200 mts y una velocidad de 120 mts³ por hora.</p>
         <a href="https://walink.co/fcfa32">Consultar</a>
     </article>
     <article class="card" data-aos="fade-zoom-in" data-aos-delay="100" data-aos-easing="ease-in-back" data-aos-offset="0">
         <div class="card_img card_img2"></div>
-        <h3 class="card_title">Venta y distribución de hormigón</h3>
+        <h1 class="card_title">Venta y distribución de hormigón</h1>
         <p class="card_desc">Poseemos una moderna flota de camiones mixer y mini-mixer que aseguran el trasporte con rapidez y limpieza hasta dentro de la obra.</p>
         <a href="https://walink.co/fcfa32">Consultar</a>
     </article>
     <article class="card" data-aos="fade-zoom-in" data-aos-delay="200" data-aos-easing="ease-in-back" data-aos-offset="0">
         <div class="card_img card_img3"></div>
-        <h3 class="card_title">Laboratorio y control de calidad</h3>
+        <h1 class="card_title">Laboratorio y control de calidad</h1>
         <p class="card_desc">Sometemos el producto a un análisis de curado, resistencia, composición y humedad. Garantizando así, la calidad y uniformidad del hormigón entregado.</p>
         <a href="https://walink.co/fcfa32">Consultar</a>
     </article>
     <article class="card" data-aos="fade-zoom-in" data-aos-delay="300" data-aos-easing="ease-in-back" data-aos-offset="0">
         <div class="card_img card_img4"></div>
-        <h3 class="card_title">Movimiento de suelo</h3>
+        <h1 class="card_title">Movimiento de suelo</h1>
         <p class="card_desc">Contamos con equipos de primera calidad para la realización de movimiento de suelos, que se lleva a cabo antes de la cimentación de las obras.</p>
         <a href="https://walink.co/fcfa32">Consultar</a>
     </article>
@@ -78,12 +78,12 @@
         <div class="container__footer">
             <div class="logo1">
                 <a href="../index.html">
-                    <img src="../multimedia/logo caran.png" alt="">
+                    <img src="../multimedia/logo caran.png" alt="logo de la empresa">
                     </a>
             </div>
             <nav>
                 <div class="navegacion">
-                    <h4>Navegación</h4>
+                    <h2>Navegación</h2>
                     <a href="../pages/nosotros.html">Nosotros</a><br>
                     <a href="../pages/servicios.html">Servicios</a><br>
                     <a href="../pages/clientes.html">Clientes</a><br>
@@ -91,13 +91,13 @@
                 </div>
             </nav>
             <div class="contacto">
-                <h4>Contacto</h4>
-                <h5>3489-343164</h5>
-                <h5>caranconcretos@gmail.com</h5>
-                <h5>Pueyrredón 1033, Campana, Buenos Aires.</h5>
+                <h2>Contacto</h2>
+                <p>3489-343164</p>
+                <p>caranconcretos@gmail.com</p>
+                <p>Pueyrredón 1033, Campana, Buenos Aires.</p>
             </div>
             <div class="redes_sociales">
-                <h4>Redes sociales</h4>
+                <h2>Redes sociales</h2>
                 <a href="https://walink.co/fcfa32"> <i class="fa-brands fa-whatsapp" style="color: #ffffff;"></i></a> 
                 <a href="https://www.instagram.com/nehu_caraballo_/"> <i class="fa-brands fa-instagram"
                     style="color: #ffffff;"></i></a>
