--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="multimedia/logo caran.png" alt="" class="img-navbar">
+                    <img src="multimedia/logo caran.png" alt="logo de la empresa" class="img-navbar">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
@@ -51,22 +51,22 @@
         <div class="home">
             <div class="foto img1" data-aos="flip-left">
                 <a href="./pages/nosotros.html">
-                    <h2>Quienes somos</h2>
+                    <h1>Quienes somos</h1>
                 </a>
             </div>
             <div class="foto img2" data-aos="flip-left" data-aos-delay="100">
                 <a href="./pages/servicios.html">
-                    <h2>Servicios</h2>
+                    <h1>Servicios</h1>
                 </a>
             </div>
             <div class="foto img3" data-aos="flip-left" data-aos-delay="200">
                 <a href="./pages/clientes.html">
-                    <h2>Clientes</h2>
+                    <h1>Clientes</h1>
                 </a>
             </div>
             <div class="foto img4" data-aos="flip-left" data-aos-delay="300">
                 <a href="./pages/contacto.html">
-                    <h2>Contactanos</h2>
+                    <h1>Contactanos</h1>
                 </a>
             </div>
         </div>
@@ -76,12 +76,12 @@
         <div class="container__footer">
             <div class="logo1">
                 <a href="index.html">
-                    <img src="multimedia/logo caran.png" alt="">
+                    <img src="multimedia/logo caran.png" alt="logo de la empresa">
                 </a>
             </div>
             <nav>
                 <div class="navegacion">
-                    <h4>Navegación</h4>
+                    <h2>Navegación</h2>
                     <a href="./pages/nosotros.html">Nosotros</a><br>
                     <a href="./pages/servicios.html">Servicios</a><br>
                     <a href="./pages/clientes.html">Clientes</a><br>
@@ -89,13 +89,13 @@
                 </div>
             </nav>
             <div class="contacto">
-                <h4>Contacto</h4>
-                <h5>3489-343164</h5>
-                <h5>caranconcretos@gmail.com</h5>
-                <h5>Pueyrredón 1033, Campana, Buenos Aires.</h5>
+                <h2>Contacto</h2>
+                <p>3489-343164</p>
+                <p>caranconcretos@gmail.com</p>
+                <p>Pueyrredón 1033, Campana, Buenos Aires.</p>
             </div>
             <div class="redes_sociales">
-                <h4>Redes sociales</h4>
+                <h2>Redes sociales</h2>
                 <a href="https://walink.co/fcfa32"> <i class="fa-brands fa-whatsapp" style="color: #ffffff;"></i></a>
                 <a href="https://www.instagram.com/nehu_caraballo_/"> <i class="fa-brands fa-instagram" style="color: #ffffff;"></i></a>
             </div>
