pruebo otras imagenes

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -64,7 +64,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../multimedia/planta4.png" class="d-block w-100" alt="planta hormigonera">
+                <img src="../multimedia/planta 2.jpg" class="d-block w-100" alt="planta hormigonera">
                 <div class="carousel-caption d-none d-md-block">
                     <p>Somos una empresa joven con un enfoque innovador en la industria constructora. Combinamos la experiencia técnica y el compromiso de ofrecer resultados sobresalientes.</p>
                 </div>
