--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -47,51 +47,53 @@
         </nav>
     </header>
     <!--Nav bar finaliza-->
-    <div class="about">
-        <div class="us">
-            <p>Somos Caran Concretos, una empresa joven que busca posicionarse como el principal proveedor de hormigón elaborado de zona norte en Buenos Aires. Este proyecto nace 4 años atras, cuando nos dimos cuenta que en nuestra ciudad hacía falta una empresa capaz de producir y entregar un material de alta calidad, brindando una atención al cliente personalizada. Para llegar a este resultado, contamos con herramientas de trabajo de última tecnología, las cuales son manejadas por un equipo de operarios profesional y capacitado.</p>
-        </div>
-    </div>
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="../multimedia/planta 2.jpg" class="d-block w-100" alt="planta hormigonera">
-                <div class="carousel-caption d-none d-md-block">
-                    <p>Somos una empresa joven con un enfoque innovador en la industria constructora. Combinamos la experiencia técnica y el compromiso de ofrecer resultados sobresalientes.</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="../multimedia/descarga8.jpg" class="d-block w-100" alt="descarga de hormigón">
-                <div class="carousel-caption d-none d-md-block">
-                    <p>Estamos construyendo un futuro sólido, y cada proyecto que abordamos es una oportunidad para demostrar nuestra habilidad, pasión y profesionalidad.</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="../multimedia/planta.jpg" class="d-block w-100" alt="planta en funcionamiento">
-                <div class="carousel-caption d-none d-md-block">
-                    <p>Creemos en desafiar las convenciones y abrazar las prácticas sostenibles. Estamos comprometidos con el crecimiento y el desarrollo sustentable de nuestra comunidad y la satisfacción de nuestros clientes.</p>
-                </div>
+    <main>
+        <div class="about">
+            <div class="us">
+                <p>Somos Caran Concretos, una empresa joven que busca posicionarse como el principal proveedor de hormigón elaborado de zona norte en Buenos Aires. Este proyecto nace 4 años atras, cuando nos dimos cuenta que en nuestra ciudad hacía falta una empresa capaz de producir y entregar un material de alta calidad, brindando una atención al cliente personalizada. Para llegar a este resultado, contamos con herramientas de trabajo de última tecnología, las cuales son manejadas por un equipo de operarios profesional y capacitado.</p>
             </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="../multimedia/planta 2.jpg" class="d-block w-100" alt="planta hormigonera">
+                    <div class="carousel-caption d-none d-md-block">
+                        <p>Somos una empresa joven con un enfoque innovador en la industria constructora. Combinamos la experiencia técnica y el compromiso de ofrecer resultados sobresalientes.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="../multimedia/descarga8.jpg" class="d-block w-100" alt="descarga de hormigón">
+                    <div class="carousel-caption d-none d-md-block">
+                        <p>Estamos construyendo un futuro sólido, y cada proyecto que abordamos es una oportunidad para demostrar nuestra habilidad, pasión y profesionalidad.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="../multimedia/planta.jpg" class="d-block w-100" alt="planta en funcionamiento">
+                    <div class="carousel-caption d-none d-md-block">
+                        <p>Creemos en desafiar las convenciones y abrazar las prácticas sostenibles. Estamos comprometidos con el crecimiento y el desarrollo sustentable de nuestra comunidad y la satisfacción de nuestros clientes.</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </main>
     <footer>
         <div class="container__footer">
             <div class="logo1">
