--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -47,33 +47,34 @@
         </nav>
     </header>
     <!--Nav bar finaliza-->
-<section>
-    <article class="card" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-offset="0">
-        <div class="card_img card_img1"></div>
-        <p class="card_title">Bombeo de hormigón</p>
-        <p class="card_desc">Brindamos servicio de bombeo con camiones pluma y cañerías fijas con un alcance de hasta 200 mts y una velocidad de 120 mts³ por hora.</p>
-        <a href="https://walink.co/fcfa32">Consultar</a>
-    </article>
-    <article class="card" data-aos="fade-zoom-in" data-aos-delay="100" data-aos-easing="ease-in-back" data-aos-offset="0">
-        <div class="card_img card_img2"></div>
-        <p class="card_title">Venta y distribución de hormigón</p>
-        <p class="card_desc">Poseemos una moderna flota de camiones mixer y mini-mixer que aseguran el trasporte con rapidez y limpieza hasta dentro de la obra.</p>
-        <a href="https://walink.co/fcfa32">Consultar</a>
-    </article>
-    <article class="card" data-aos="fade-zoom-in" data-aos-delay="200" data-aos-easing="ease-in-back" data-aos-offset="0">
-        <div class="card_img card_img3"></div>
-        <p class="card_title">Laboratorio y control de calidad</p>
-        <p class="card_desc">Sometemos el producto a un análisis de curado, resistencia, composición y humedad. Garantizando así, la calidad y uniformidad del hormigón entregado.</p>
-        <a href="https://walink.co/fcfa32">Consultar</a>
-    </article>
-    <article class="card" data-aos="fade-zoom-in" data-aos-delay="300" data-aos-easing="ease-in-back" data-aos-offset="0">
-        <div class="card_img card_img4"></div>
-        <p class="card_title">Movimiento de suelo</p>
-        <p class="card_desc">Contamos con equipos de primera calidad para la realización de movimiento de suelos, que se lleva a cabo antes de la cimentación de las obras.</p>
-        <a href="https://walink.co/fcfa32">Consultar</a>
-    </article>
-</section>
-    </div>
+    <main>
+        <section>
+            <article class="card" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-offset="0">
+                <div class="card_img card_img1"></div>
+                <p class="card_title">Bombeo de hormigón</p>
+                <p class="card_desc">Brindamos servicio de bombeo con camiones pluma y cañerías fijas con un alcance de hasta 200 mts y una velocidad de 120 mts³ por hora.</p>
+                <a href="https://walink.co/fcfa32">Consultar</a>
+            </article>
+            <article class="card" data-aos="fade-zoom-in" data-aos-delay="100" data-aos-easing="ease-in-back" data-aos-offset="0">
+                <div class="card_img card_img2"></div>
+                <p class="card_title">Venta y distribución de hormigón</p>
+                <p class="card_desc">Poseemos una moderna flota de camiones mixer y mini-mixer que aseguran el trasporte con rapidez y limpieza hasta dentro de la obra.</p>
+                <a href="https://walink.co/fcfa32">Consultar</a>
+            </article>
+            <article class="card" data-aos="fade-zoom-in" data-aos-delay="200" data-aos-easing="ease-in-back" data-aos-offset="0">
+                <div class="card_img card_img3"></div>
+                <p class="card_title">Laboratorio y control de calidad</p>
+                <p class="card_desc">Sometemos el producto a un análisis de curado, resistencia, composición y humedad. Garantizando así, la calidad y uniformidad del hormigón entregado.</p>
+                <a href="https://walink.co/fcfa32">Consultar</a>
+            </article>
+            <article class="card" data-aos="fade-zoom-in" data-aos-delay="300" data-aos-easing="ease-in-back" data-aos-offset="0">
+                <div class="card_img card_img4"></div>
+                <p class="card_title">Movimiento de suelo</p>
+                <p class="card_desc">Contamos con equipos de primera calidad para la realización de movimiento de suelos, que se lleva a cabo antes de la cimentación de las obras.</p>
+                <a href="https://walink.co/fcfa32">Consultar</a>
+            </article>
+        </section>
+    </main>
     <footer>
         <div class="container__footer">
             <div class="logo1">
