--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -45,7 +45,8 @@
         </nav>
     </header>
 <!--Nav bar finaliza-->
-<p data-aos="fade-down">Clientes que certifican nuestros servicios</p>
+<main>
+    <p data-aos="fade-down">Clientes que certifican nuestros servicios</p>
     <div class="clients">
         <div class="item item1"></div>
         <div class="item item2"></div>
@@ -55,6 +56,7 @@
         <div class="item item6"></div>
     </div>
     </div>
+</main>
     <footer>
         <div class="container__footer">
             <div class="logo1">
